--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 spring.data.mongodb.database=mongoSecure_db
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-
+spring.main.allow-bean-definition-overriding=true
 # App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
 #bezkoder.app.jwtExpirationMs= 86400000
@@ -33,6 +33,18 @@ spring.mail.password=vbvzdwuigrbpflfy
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/BookLibrary
+#spring.datasource.url = jdbc:mysql://localhost:3306/BookLibrary?useSSL=false
+spring.datasource.username =inferyx
+spring.datasource.password =20Inferyx!9
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+#server.port=8080
+#logging.level.org.springframework=DEBUG
+spring.jpa.show-sql=true
 
 
